--- a/Gesture Classification v1.ipynb
+++ b/Gesture Classification v1.ipynb
@@ -66,7 +66,8 @@
     "                             header=None,sep=\" \")\n",
     "            #define the columns\n",
     "            file.columns = [\"X Acceleration\",\"Y Acceleration\",\"Z Acceleration\"]\n",
-    "\n",
+    "            \n",
+    "            #Extract the data to a np array as I am interested in merging the data to 1 column\n",
     "            vec1 = np.array([file[\"X Acceleration\"],file[\"Y Acceleration\"],file[\"Z Acceleration\"]])\n",
     "\n",
     "            vec21 = vec1[0] #X Acceleration\n",
@@ -84,8 +85,7 @@
     "            vec = np.array([vec41,vec42,vec43]).reshape(300,) #1-row vector containing X,Y and Z\n",
     "            vec = np.append(vec,k)\n",
     "            ser = pd.Series(vec)\n",
-    "            df = pd.concat([df,ser],axis=1)\n",
-    "            #matrix = np.append(matrix,vec,axis=0)"
+    "            df = pd.concat([df,ser],axis=1) #successively merging the dataframe together"
    ]
   },
   {
@@ -401,7 +401,7 @@
    "metadata": {},
    "source": [
     "## Transpose the Matrix \n",
-    "### Label is visible and easily extractable like this"
+    "### Label is visible and easily extractable after transposing the dataframe"
    ]
   },
   {
@@ -424,7 +424,7 @@
    "outputs": [],
    "source": [
     "df_transpo[300]\n",
-    "df_transpo=df_transpo.rename(columns = {300:'Label'})"
+    "df_transpo=df_transpo.rename(columns = {300:'Label'}) #rename the last column as this is my label"
    ]
   },
   {
@@ -823,7 +823,8 @@
     }
    ],
    "source": [
-    "df_transpo.info()"
+    "df_transpo.info()\n",
+    "#every column contains numerical data only."
    ]
   },
   {
@@ -1512,19 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from sklearn.preprocessing import MinMaxScaler\n",
-    "#scaler = MinMaxScaler()\n",
-    "#X_train = scaler.fit_transform(X_train)\n",
-    "#X_test = scaler.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1536,16 +1525,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=0.001, multi_class='multinomial')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.fit(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1554,9 +1554,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3., 5., 8., 2., 5., 7., 6., 5., 3., 5., 5., 3., 3., 3., 4., 2., 2.,\n",
+       "       7., 3., 6.])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pred[0:20]\n"
    ]
@@ -1570,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1579,22 +1591,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         1.0       0.88      0.95      0.91        96\n",
+      "         2.0       0.96      0.97      0.97       101\n",
+      "         3.0       0.97      1.00      0.99       112\n",
+      "         4.0       0.97      1.00      0.99       109\n",
+      "         5.0       0.98      0.99      0.99       125\n",
+      "         6.0       0.94      0.91      0.93        91\n",
+      "         7.0       0.97      0.93      0.95        94\n",
+      "         8.0       0.98      0.91      0.94       112\n",
+      "\n",
+      "    accuracy                           0.96       840\n",
+      "   macro avg       0.96      0.96      0.96       840\n",
+      "weighted avg       0.96      0.96      0.96       840\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(classification_report(y_test,pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 91,   0,   0,   1,   0,   3,   0,   1],\n",
+       "       [  0,  98,   0,   0,   0,   0,   3,   0],\n",
+       "       [  0,   0, 112,   0,   0,   0,   0,   0],\n",
+       "       [  0,   0,   0, 109,   0,   0,   0,   0],\n",
+       "       [  0,   0,   1,   0, 124,   0,   0,   0],\n",
+       "       [  2,   0,   1,   2,   2,  83,   0,   1],\n",
+       "       [  6,   1,   0,   0,   0,   0,  87,   0],\n",
+       "       [  4,   3,   1,   0,   0,   2,   0, 102]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Large number of misclassifications\n",
-    "#Overall bad performance\n",
-    "#Options: Hyperparameter tuning, new ML model (SVM,ANN), Data Normalization, Cross-validation, \n",
+    "#Overall very good results already, after some hyperparameter tuning\n",
+    "#Further Options: Hyperparameter tuning, new ML model (SVM,ANN), Data Normalization, Cross-validation, \n",
     "confusion_matrix(y_test,pred)"
    ]
   },
@@ -1607,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,9 +1676,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'aiplatform' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-35-ad3888f8653f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mprediction\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mendpoint_predict_sample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"julioare-project1\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"us-central1\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdf_transpo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"endpoint_pickle\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-35-ad3888f8653f>\u001b[0m in \u001b[0;36mendpoint_predict_sample\u001b[0;34m(project, location, instances, endpoint)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mproject\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlocation\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minstances\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mendpoint\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m ):\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0maiplatform\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproject\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mproject\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlocation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlocation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mendpoint\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maiplatform\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEndpoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mendpoint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'aiplatform' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def endpoint_predict_sample(\n",
     "    project: str, location: str, instances: list, endpoint: str\n",
@@ -1638,7 +1702,9 @@
     "\n",
     "    prediction = endpoint.predict(instances=instances)\n",
     "    print(prediction)\n",
-    "    return prediction\n"
+    "    return prediction\n",
+    "\n",
+    "endpoint_predict_sample(\"julioare-project1\",\"us-central1\",df_transpo.iloc[5],\"endpoint_pickle\")"
    ]
   },
   {
@@ -1650,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
