Debugging User 3 and User 7

--- a/Gesture Classification v1.ipynb
+++ b/Gesture Classification v1.ipynb
@@ -1523,53 +1523,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Multinomial, because I am dealing with 8 classes\n",
-    "#Solver: default one – Others possible\n",
+    "#Solver: newton solver one – Others possible\n",
     "#C: Regularization parameter. The closer to 0, the harder penalization\n",
-    "model = LogisticRegression(multi_class='multinomial', solver='lbfgs',penalty=\"l2\",C=0.001)"
+    "model = LogisticRegression(multi_class='multinomial', solver='newton-cg',penalty=\"l2\",C=0.001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/julioarend/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:762: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=0.001, multi_class='multinomial')"
+       "LogisticRegression(C=0.001, multi_class='multinomial', solver='newton-cg')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(X_train,y_train,max_iter)"
+    "model.fit(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1578,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1588,7 +1574,7 @@
        "       5., 3., 4.])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1606,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1615,18 +1601,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         1.0       0.91      0.93      0.92       149\n",
+      "         2.0       0.93      0.94      0.94       151\n",
+      "         3.0       0.95      0.98      0.97       128\n",
+      "         4.0       0.93      0.97      0.95       145\n",
+      "         5.0       0.98      0.97      0.97       137\n",
+      "         6.0       0.91      0.92      0.92       128\n",
+      "         7.0       0.93      0.93      0.93       139\n",
+      "         8.0       0.94      0.84      0.89       143\n",
+      "\n",
+      "    accuracy                           0.94      1120\n",
+      "   macro avg       0.94      0.94      0.94      1120\n",
+      "weighted avg       0.94      0.94      0.94      1120\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(classification_report(y_test,pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[139,   0,   0,   4,   0,   3,   0,   3],\n",
+       "       [  0, 142,   2,   0,   0,   1,   6,   0],\n",
+       "       [  0,   0, 126,   0,   0,   1,   1,   0],\n",
+       "       [  0,   0,   1, 141,   0,   1,   2,   0],\n",
+       "       [  1,   0,   1,   0, 133,   2,   0,   0],\n",
+       "       [  0,   1,   0,   3,   1, 118,   0,   5],\n",
+       "       [  4,   3,   3,   0,   0,   0, 129,   0],\n",
+       "       [  8,   6,   0,   4,   2,   3,   0, 120]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Overall very good results already, after some hyperparameter tuning\n",
     "#Further Options: Hyperparameter tuning, new ML model (SVM,ANN), Data Normalization, Cross-validation, \n",
@@ -1642,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1687,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
